--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="author" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="">
-		<link rel="shortcut icon" href="">
+		<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
 		<style type="text/css">
 .logo-bg {
 	width: 460px;
