--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 		<meta charset="utf-8">
 		<title>Shiper Sweet Kitchen</title>
 		<meta name="description" content="">
-		<meta name="author" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="">
+		<link rel="stylesheet" href="//yastatic.net/bootstrap/3.3.4/css/bootstrap.min.css">
 		<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
 		<style type="text/css">
 .logo-bg {
@@ -17,9 +16,34 @@
 	background-image:url(assets/img/logo.svg);
 	background-size: 460px 436px;
 }
+.social {
+	margin-top: 32px;
+}
+.social__link {
+	display: inline-block;
+	padding-left: 40px;
+	line-height: 24px;
+	background-repeat: no-repeat;
+	background-size: 24px 24px;
+	background-position: 8px 50%;
+}
+.social__link_vk {
+	background-image: url(assets/img/vk.svg)
+}
+.social__link_instagram {
+	background-image: url(assets/img/instagram.svg)
+}
 		</style>
 	</head>
 	<body>
 		<div class="logo-bg"></div>
+		<div class="row social">
+			<div class="col-lg-6 text-right">
+				<a class="btn btn-default btn-lg social__link social__link_vk" href="https://vk.com/shiper_skitchen">shiper_skitchen</a>
+			</div>
+			<div class="col-lg-6 text-left">
+				<a class="btn btn-default btn-lg social__link social__link_instagram" href="https://instagram.com/shiper_skitchen">shiper_skitchen</a>
+			</div>
+		</div>
 	</body>
 </html>
