--- a/index.html
+++ b/index.html
@@ -6,34 +6,10 @@
 		<title>Shiper Sweet Kitchen</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="//yastatic.net/bootstrap/3.3.4/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 		<link rel="stylesheet" href="//yastatic.net/bootstrap/3.3.4/css/bootstrap.min.css">
 		<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
-		<style type="text/css">
-.logo-bg {
-	width: 460px;
-	height:436px;
-	margin: 100px auto 0;
-	background-image:url(assets/img/logo.svg);
-	background-size: 460px 436px;
-}
-.social {
-	margin-top: 32px;
-}
-.social__link {
-	display: inline-block;
-	padding-left: 40px;
-	line-height: 24px;
-	background-repeat: no-repeat;
-	background-size: 24px 24px;
-	background-position: 8px 50%;
-}
-.social__link_vk {
-	background-image: url(assets/img/vk.svg)
-}
-.social__link_instagram {
-	background-image: url(assets/img/instagram.svg)
-}
-		</style>
 	</head>
 	<body>
 		<div class="logo-bg"></div>
