--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="//yastatic.net/bootstrap/3.3.4/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
-		<link rel="stylesheet" href="//yastatic.net/bootstrap/3.3.4/css/bootstrap.min.css">
-		<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
+		<link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+		<link rel="shortcut icon" type="image/png" href="/assets/img/favicon.png">
 	</head>
 	<body>
 		<div class="logo-bg"></div>
