Fixed mixed content

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Set the type and color theme here - the Pro version contains additional themes -
 <link href="assets/css/hawthorne_type1_color2.css" rel="stylesheet">
 <!--  ************************************************************************************* -->
 
-<link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 
 </head>
