--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <!-- ******************************************************************************************
 Set the type and color theme here - the Pro version contains additional themes -->
-<link href="assets/css/hawthorne_type1_color2.css" rel="stylesheet">
+<link href="/assets/css/hawthorne_type1_color2.css" rel="stylesheet">
 <!--  ************************************************************************************* -->
 
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.0.0/js/foundation.min.js" rel="stylesheet">
 <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 
 </head>
@@ -106,7 +106,7 @@ Set the type and color theme here - the Pro version contains additional themes -
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.0.0/js/foundation.min.js"></script>
-<script src="assets/js/hawthorne.js"></script>
+<script src="/assets/js/hawthorne.js"></script>
 
 </body>
 </html>
