Added socail icons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Set the type and color theme here - the Pro version contains additional themes -
 <link href="/assets/css/hawthorne_type1_color2.css" rel="stylesheet">
 <!--  ************************************************************************************* -->
 
-<link href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.0.0/js/foundation.min.js" rel="stylesheet">
+<link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 
 </head>
@@ -97,8 +97,8 @@ Set the type and color theme here - the Pro version contains additional themes -
 				
 			</ul>
 			<div class="social-icons">
-				<a href="http://www.twitter.com/typeandgrids" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
-				<a href="http://www.facebook.com/typeandgrids" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
+				<a href="https://vk.com/shiper_skitchen" target="_blank"><i class="fa fa-vk fa-2x"></i></a>
+				<a href="https://instagram.com/shiper_skitchen" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
 			</div>
 		</footer>
 	</div>
