Add mobile phone number

--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@ Set the type and color theme here - the Pro version contains additional themes -
 				
 			</ul>
 			<div class="social-icons">
-				<a href="https://vk.com/shiper_skitchen" target="_blank"><i class="fa fa-vk fa-2x"></i></a>
 				<a href="https://instagram.com/shiper_skitchen" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
+				<a href="https://vk.com/shiper_skitchen" target="_blank"><i class="fa fa-vk fa-2x"></i></a>
+				<a href="tel:+79817389438"><i class="fa fa-phone-square fa-2x"></i></a>
 			</div>
 		</footer>
 	</div>
