Remove copy text

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Set the type and color theme here - the Pro version contains additional themes -
 	<div class="small-12 medium-12 large-12 columns">
 		<footer>
 			<ul>
-				<li>&copy; 2015 <a href="index.html">Shiper Sweet Kitchen</a>. All rights reserved.</li>
+				<li>&copy; 2015 <a href="index.html">Shiper Sweet Kitchen</a>.</li>
 				<li><a href="mailto:shiper@skitchen.ru"><i class="fa fa-envelope-o"></i> shiper@skitchen.ru</a></li>
 				
 				<!-- *****************************************************************************************
